--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
+KERNEL_SOURCE=https://github.com/mominqimiang/kernel_xiaomi_rembrandt
+KERNEL_SOURCE_BRANCH=bsp-rembrandt-s-oss
+KERNEL_CONFIG=vendor/rembrandt_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
